--- a/style.css
+++ b/style.css
@@ -9,6 +9,90 @@ body {
     color: #fff;
     min-height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+.clock {
+    text-align: center;
+}
+.date {
+    font-family: sans-serif;
+    font-size: 2rem;
+}
+.time {
+    font-family: monospace;
+    font-size: 5rem;
+}
+.analogue {
+    background-color: #fff;
+    width: 200px;
+    height: 200px;
+    border-radius: 100px;
+    position: relative;
+}
+.arr {
+    position: absolute;
+    border-radius: 0 0 3px 3px;
+    transform-origin: bottom;
+}
+.hours {
+    width: 6px;
+    height: 60px;
+    background-color: green;
+    top: calc(50% - 60px);
+    left: calc(50% - 3px);
+}
+.minutes {
+    width: 4px;
+    height: 70px;
+    background-color: blue;
+    top: calc(50% - 70px);
+    left: calc(50% - 2px);
+}
+.seconds {
+    width: 2px;
+    height: 80px;
+    background-color: red;
+    top: calc(50% - 80px);
+    left: calc(50% - 1px);
+}
+.mark {
+    position: absolute;
+    color: #000;
+}
+.mark-12 {
+    top: 6px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+/* slider */
+
+.pomodoro {
+    margin-top: 1rem;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.slider {
+    background-color: #fff;
+    width: 51px;
+    border-radius: 11px;
+    padding: 3px;
+    transition: all 200ms;
+}
+.dot {
+    background-color: red;
+    width: 15px;
+    height: 15px;
+    border-radius: 8px;
+}
+.label {
+}
+.slider:hover {
+    background-color: red;
+}
+.slider:hover .dot {
+    background-color: #fff;
+    transform: translateX(30px);
 }
